[tool.poetry]
name = "openai-image-generator"
version = "0.1.0"
description = "Generate image by using Open AI API"
authors = ["otajisan <mtaji@morningcode.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
